--- a/app_public/src/index.html
+++ b/app_public/src/index.html
@@ -9,7 +9,7 @@
 
   <base href="/">
   <link rel="stylesheet" href="assets/stylesheets/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/stylesheets/style.css">
+  <!-- <link rel="stylesheet" href="assets/stylesheets/style.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
